# KMINT-pigisland-Eindopdracht

./: .gitignore  .gitmodules  CMakeLists.txt  shell.nix
dependencies/SDL2_image/: sdl2_image-config.cmake
libkmint/: .gitignore  .projectile  CMakeLists.txt  Doxyfile  shell.nix
libkmint/doc/: map.txt  tutorial.org
libkmint/doc/resources/: firstmap.tmx
libkmint/include/kmint/: graphics.hpp  main.hpp  play.hpp  primitives.hpp  random.hpp  ui.hpp
libkmint/include/kmint/graph/: basic_edge.hpp  basic_graph.hpp  basic_node.hpp  graph.hpp
libkmint/include/kmint/graphics/: color.hpp  image.hpp
libkmint/include/kmint/map/: map.hpp
libkmint/include/kmint/math/: angle.hpp  intersection.hpp  line_segment.hpp  matrix.hpp  rectangle.hpp  size.hpp  vector2d.hpp
libkmint/include/kmint/play/: actor.hpp  background.hpp  free_roaming_actor.hpp  graph_actor.hpp  graph_bound_actor.hpp  graph_drawable.hpp  image_drawable.hpp  map.hpp  map_bound_actor.hpp  quad_tree.hpp  stage.hpp  static_actor.hpp  texture_drawable.hpp
libkmint/include/kmint/ui/: app.hpp  drawable.hpp  exceptions.hpp  noop_drawable.hpp  sprite.hpp  texture.hpp  window.hpp
libkmint/include/kmint/ui/events/: event.hpp
libkmint/include/kmint/util/: deref_unique_ptr.hpp  finally.hpp  iterator_wrapper.hpp  overload.hpp  wrapped_iterator.hpp
libkmint/src/kmint/: random.cpp
libkmint/src/kmint/graph/: graph.cpp
libkmint/src/kmint/map/: map.cpp
libkmint/src/kmint/math/: angle.cpp  vector2d.cpp
libkmint/src/kmint/play/: actor.cpp  image_drawable.cpp  stage.cpp  texture_drawable.cpp
libkmint/src/kmint/ui/: app.cpp  renderer.cpp  renderer.hpp  window.cpp
libkmint/src/kmint/ui/events/: event.cpp
libkmint/src/kmint/ui/sdl/: create.hpp  destroy.hpp  ptr.hpp  surface.hpp  texture.cpp  texture.hpp  utility.hpp
libkmint/support/: run-clang-tidy.sh
libkmint/support/win/: sdl2-config.cmake
libkmint/test/graph/: graph.cpp  node.cpp
libkmint/test/map/: map.cpp
libkmint/test/math/: rectangle.cpp  size.cpp
libkmint/test/play/: actor.cpp  interactive_actor.hpp  quad_tree.cpp  silly_actor.hpp  stage.cpp
libkmint/test/ui/events/: modifier.cpp
libkmint/test/util/: wrapped_iterator.cpp
pigisland/: CMakeLists.txt
pigisland/src/kmint/pigisland/: Program.cpp  Program.hpp  main.cpp
pigisland/src/kmint/pigisland/algorithms/: node_algorithm.cpp  node_algorithm.hpp
pigisland/src/kmint/pigisland/algorithms/finitestate/: IGlobalState.hpp  IState.hpp  StateMachine.hpp
pigisland/src/kmint/pigisland/algorithms/finitestate/boat/: BoatGlobalState.cpp  BoatGlobalState.hpp  BoatRepair.cpp  BoatRepair.hpp  BoatState.hpp  BoatWander.cpp  BoatWander.hpp
pigisland/src/kmint/pigisland/algorithms/finitestate/scorecard/: BoatDockingScoreCard.hpp  ScoreCard.hpp
pigisland/src/kmint/pigisland/algorithms/finitestate/shark/: SharkChase.cpp  SharkChase.hpp  SharkFlee.cpp  SharkFlee.hpp  SharkGlobalState.cpp  SharkGlobalState.hpp  SharkState.hpp  SharkTired.cpp  SharkTired.hpp  SharkWander.cpp  SharkWander.hpp
pigisland/src/kmint/pigisland/algorithms/forcedrivenentities/: SteeringBehaviours.cpp  SteeringBehaviours.hpp
pigisland/src/kmint/pigisland/algorithms/geneticalgorithm/: Chromosome.hpp  GeneticAlgorithm.cpp  GeneticAlgorithm.hpp  GeneticScoreCard.hpp
pigisland/src/kmint/pigisland/algorithms/pathfinder/: AStarSearchStrategy.cpp  AStarSearchStrategy.hpp  ISearchStrategy.hpp  PathFinder.hpp
pigisland/src/kmint/pigisland/datastructures/: PriorityQueue.hpp
pigisland/src/kmint/pigisland/entities/: DockingStation.hpp  boat.cpp  boat.hpp  pig.cpp  pig.hpp  shark.cpp  shark.hpp
pigisland/src/kmint/pigisland/entities/base/: MapActor.cpp  MapActor.hpp  MovingEntity.cpp  MovingEntity.hpp
pigisland/src/kmint/pigisland/entities/properties/: IProperties.hpp  PigPropertiesDefault.hpp  PigPropertiesGenetic.hpp
pigisland/src/kmint/pigisland/resources/: resources.cpp  resources.hpp
pigisland/src/kmint/pigisland/util/: DrawableWall.hpp  Wall2D.hpp  WallFactory.hpp  math.hpp
